Fixes for mobile and tablet modal issues with jumping around while interacting with form elements

--- a/docroot/sites/all/themes/custom/virginsport/src/scss/_globals.scss
+++ b/docroot/sites/all/themes/custom/virginsport/src/scss/_globals.scss
@@ -20,6 +20,18 @@ body {
   }
 }
 
+.modal-open {
+  .page-wrapper {
+    overflow: hidden;
+  }
+
+    @include media-breakpoint-down(md) {
+      .vs-overlay-blur {
+        position:fixed;
+      }
+    }
+}
+
 p {
   margin-bottom: 1.875rem;
   font-weight: 400;
